# Context-Studio

./: .env.example  .gitignore  CONFIG.md  Dockerfile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
extractors/: fallback.py
processors/: fuzzy_search.py  summarize.py  title.py
tests/: conftest.py  test_config.py  test_search.py  test_summarize.py  test_title.py
