[project]
name = "context-manager-extractors"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.116.1",
    "markitdown[all]~=0.1.2",
    "uvicorn-hmr~=0.0.9",
]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnore = true

[tool.m.aliases]
dev = "uvicorn-hmr --clear"

[dependency-groups]
dev = ["ruff~=0.12.5"]
